#
# Copyright (c) 2012-2013 Red Hat, Inc. All rights reserved.
#
# This copyrighted material is made available to anyone wishing
# to use, modify, copy, or redistribute it subject to the terms
# and conditions of the GNU General Public License version 2.
#
# This program is distributed in the hope that it will be
# useful, but WITHOUT ANY WARRANTY; without even the implied
# warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR
# PURPOSE. See the GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public
# License along with this program; if not, write to the Free
# Software Foundation, Inc., 51 Franklin Street, Fifth Floor,
# Boston, MA 02110-1301, USA.

dist_pkgdata_DATA = \
    carton.sh               \
    carton_branch.sh        \
    carton_channel.sh       \
    carton_channel_list.sh  \
    carton_commit.sh        \
    carton_project.sh       \
    carton_project_list.sh  \
    carton_repo.sh          \
    carton_repo_list.sh     \
    carton_rev.sh           \
    carton_util.sh
